--- a/SystemFiles/Makefile
+++ b/SystemFiles/Makefile
@@ -23,6 +23,88 @@ SRCS =  Arrangement.cpp \
 		CompletedState.cpp \
 		CancelledState.cpp \
 		Customer.cpp \
+
+		AddToCart.cpp \
+		BulkDiscount.cpp \
+		CareIterator.cpp \
+		CartIterator.cpp \
+		CustomerCommand.cpp \
+		DefaultRecomm.cpp \
+		Invoker.cpp \
+		Iterator.cpp \
+		Plant.cpp \
+		PlantContainer.cpp \
+		PlantInventory.cpp \
+		PlantIterator.cpp \
+		PriceRangeIterator.cpp 
+		PricingStrategy.cpp \
+		Promotional.cpp \
+		RecommStrategy.cpp \
+		Regularprice.cpp \
+		RemoveFromCart.cpp \
+		StratContext.cpp \
+		SunlightRecomm.cpp \ 
+		WaterRecomm.cpp \
+
+		Flower.cpp \
+		FlowerFactory.cpp \
+		FlowerGroup.cpp \
+		FlowerProduct.cpp \
+		InventoryObserver.cpp \
+		PlantFactory.cpp \
+		StaffNotificationObserver.cpp \
+		StockManager.cpp \
+		StockObserver.cpp \
+		Succulent.cpp \
+		SucculentFactory.cpp \
+		SucculentGroup.cpp \
+		SucculentProduct.cpp \
+		Tree.cpp \
+		TreeFactory.cpp \
+		TreeGroup.cpp \ 
+		TreeProduct.cpp \
+
+		Aggregate.cpp \
+		Command.cpp \
+		CustomerQuery.cpp \
+		CustomerQueryHandler.cpp \
+		DeliveryStaff.cpp \
+		DeliveryStaffFactory.cpp \
+		FertilizeCommand.cpp \
+		FloweringState.cpp \
+		Gardener.cpp \
+		GardenerFactory.cpp \
+		InventoryMediator.cpp \
+		InventorySystem.cpp \
+		Iterator.cpp \
+		JuniorGardener.cpp \
+		JuniorStaff.cpp \
+		Manager.cpp \
+		ManagerFactory.cpp \
+		MatureState.cpp \
+		NurseryInventoryMediator.cpp \
+		Plant.cpp \
+		PlantCareHandler.cpp \
+		PlantContext.cpp \
+		PlantExpert.cpp \
+		PlantInventory.cpp \
+		PlantIssue.cpp \
+		PlantIterator.cpp \
+		PlantSpecialist.cpp \
+		PlantState.cpp \
+		PruneCommand.cpp \
+		ReadyForSaleState.cpp \
+		SalesAssistant.cpp \
+		SalesAssistantFactory.cpp \
+		SalesExpert.cpp \
+		SeedlingState.cpp \
+		SeniorGardener.cpp \
+		SoldState.cpp \
+		Staff.cpp \
+		StaffFactory.cpp \
+		SunlightCommand.cpp \
+		WaterCommand.cpp \
+
 		main.cpp
 
 OBJS = $(SRCS:.cpp=.o)
