Changes on my side

--- a/SystemFiles/Makefile
+++ b/SystemFiles/Makefile
@@ -1,11 +1,9 @@
 CXX = g++
 CXXFLAGS = -std=c++11 -Wall -DSUPPORT_TEST_TOGGLES
 TARGET = nursery_system
-TEST_TARGET = decoration_test
 #test
 
-SRCS =  NurseryUI.cpp\
-		Arrangement.cpp\
+SRCS =  Arrangement.cpp\
 		ConcreteArrangementBuilder.cpp\
 		Director.cpp\
 		ItemDecorator.cpp\
@@ -137,12 +135,5 @@ coverage: clean
 clean:
 	rm -f $(OBJS) $(TARGET) *.gcda *.gcno *.gcov coverage.info
 	rm -rf coverage_html
-
-# Decoration test target
-$(TEST_TARGET): DecorationTest.cpp $(filter-out main.o, $(OBJS))
-	$(CXX) $(CXXFLAGS) -o $(TEST_TARGET) DecorationTest.cpp $(filter-out main.o, $(OBJS))
-
-test: $(TEST_TARGET)
-	./$(TEST_TARGET)
 
 .PHONY: all run clean valgrind coverage test
