update main and makefile

--- a/SystemFiles/Makefile
+++ b/SystemFiles/Makefile
@@ -13,7 +13,6 @@ SRCS =  CompleteNurseryUI.cpp\
 		GiftWrap.cpp\
 		Note.cpp\
 		PlantItem.cpp\
-		PrototypeRegistry.cpp\
 		SalesContext.cpp\
 		State.cpp\
 		BrowsingState.cpp\
@@ -108,6 +107,7 @@ SRCS =  CompleteNurseryUI.cpp\
 		PlantInventory.cpp\
 		PlantIterator.cpp\
 		ArrangementsIterator.cpp\
+		PlantAsItemAdapter.cpp\
 		main.cpp 
 
 OBJS = $(SRCS:.cpp=.o)
