Fixed Pricing , now customers can choose different pricing via a condition

--- a/SystemFiles/Makefile
+++ b/SystemFiles/Makefile
@@ -95,6 +95,7 @@ SRCS =  Arrangement.cpp\
 		PlantContainer.cpp\
 		PriceRangeIterator.cpp\
 		PricingStrategy.cpp\
+		Promotional.cpp\
 		RecommStrategy.cpp\
 		RegularPrice.cpp\
 		RemoveFromCart.cpp\
