changes to makefile for unit testing and updates done to the unit testing file

--- a/SystemFiles/Makefile
+++ b/SystemFiles/Makefile
@@ -1,7 +1,7 @@
 CXX = g++
 CXXFLAGS = -std=c++11 -Wall -DSUPPORT_TEST_TOGGLES
 TARGET = nursery_system
-#test
+TEST_TARGET = unit_test
 
 SRCS =  Arrangement.cpp\
 		CompleteNurseryUI.cpp\
@@ -112,16 +112,33 @@ SRCS =  Arrangement.cpp\
 
 OBJS = $(SRCS:.cpp=.o)
 
+CORE_OBJS = $(filter-out main.o, $(OBJS))
+
 all: $(TARGET)
 
 $(TARGET): $(OBJS)
 	$(CXX) $(CXXFLAGS) -o $(TARGET) $(OBJS)
+
+test-%: %.cpp $(CORE_OBJS)
+	$(CXX) $(CXXFLAGS) -o $(TEST_TARGET) $< $(CORE_OBJS)
+	./$(TEST_TARGET)
+
+test: $(TEST_TARGET)
+	./$(TEST_TARGET)
+
+$(TEST_TARGET): $(CORE_OBJS)
+	@echo "Please specify a test file. Usage: make test-<test_filename>"
+	@echo "Example: make test-PlantTest.cpp"
 
 %.o: %.cpp
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 valgrind: $(TARGET)
 	valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes ./$(TARGET)
+
+valgrind-test-%: %.cpp $(CORE_OBJS)
+	$(CXX) $(CXXFLAGS) -o $(TEST_TARGET) $< $(CORE_OBJS)
+	valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes ./$(TEST_TARGET)
 
 run: $(TARGET)
 	./$(TARGET)
@@ -133,8 +150,15 @@ coverage: clean
 	genhtml coverage.info --output-directory coverage_html
 	@echo "Coverage report generated in coverage_html/index.html"
 
+coverage-test-%: %.cpp
+	$(MAKE) clean
+	$(MAKE) CXXFLAGS="$(CXXFLAGS) -fprofile-arcs -ftest-coverage" CORE_OBJS="$(CORE_OBJS)" test-$*
+	lcov --capture --directory . --output-file coverage.info
+	genhtml coverage.info --output-directory coverage_html
+	@echo "Coverage report for $* generated in coverage_html/index.html"
+
 clean:
-	rm -f $(OBJS) $(TARGET) *.gcda *.gcno *.gcov coverage.info
+	rm -f $(OBJS) $(TARGET) $(TEST_TARGET) *.gcda *.gcno *.gcov coverage.info
 	rm -rf coverage_html
 
-.PHONY: all run clean valgrind coverage test
+.PHONY: all run clean valgrind coverage test valgrind-test-% test-% coverage-test-%
